# goit-pythonweb-hw-01

./: .gitignore  Makefile  main.py  pyproject.toml  task1.py  task2.py
