[project]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii Korchevnyi",email = "andrey.korchevnyi@pragmaticdlt.com"}
]


readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy (>=1.15.0,<2.0.0)",
    "ruff (>=0.9.9,<0.10.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

line-length = 100
indent-width = 4

quote-style = "double"






